force-app/main/default/objects/Interns_Report__c/Interns_Report__c.object-meta.xml
<CustomObject>
    <label>Interns Report</label>
    <nameField>
        <label>Interns Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Interns Reports</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>