force-app/main/default/objects/Interns_Report__c/fields/Employee_Id__c.field-meta.xml
<CustomField>
    <fullName>Employee_Id__c</fullName>
    <displayFormat>I-{000}</displayFormat>
    <label>Employee Id</label>
    <type>AutoNumber</type>
</CustomField>