force-app/main/default/objects/Interns_Report__c/fields/Office_email__c.field-meta.xml
<CustomField>
    <fullName>Office_email__c</fullName>
    <caseSensitive>true</caseSensitive>
    <label>Office email</label>
    <type>Email</type>
    <unique>true</unique>
</CustomField>